Added new section and resume

--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -16,7 +16,10 @@
     width: 200px;
 }
 .socials{
+    width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     color: #fff;
 }
 .socials a{
