--- a/src/section/Section.module.css
+++ b/src/section/Section.module.css
@@ -8,6 +8,10 @@ margin:10px;
   font-weight: 600;
   cursor: pointer;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 .btn:hover{
     background-color:black;
     color: white;
